# max-common-sdk

./: .gitignore  README.md
.github/workflows/: codegen-ci.yml
api/: README.md
api/openapi/: max-bot-api.yaml
docs/specs/: README.md  api-governance.md  codegen-architecture.md  ir-next-phase.md  message-construction-input-research.md  milestone-current-state.md  openapi-markup-fidelity-plan.md  openapi-remaining-raw-plan.md  openapi-route-modeling.md  openapi-schema-fidelity-plan.md  release-model.md  rfc-index.md  roadmap.md  sdk-architecture-spec.md  support-matrix.md  support-matrix.yaml
generators/: README.md
generators/core/: README.md
runtimes/: README.md
sdks/: README.md
sdks/csharp/client/: README.md
sdks/python/client/: README.md  pyproject.toml
sdks/python/client/src/max_client/: __init__.py
sdks/python/client/src/max_client/runtime/: __init__.py  api_error.py  base_api_client.py
sdks/typescript/client/: README.md  index.ts  package-lock.json  package.json  tsconfig.json
tests/: README.md
tests/codegen/: test_bootstrap_ir.py  test_csharp_renderer.py  test_generator_manifest.py  test_multilang_contract.py  test_pipeline.py  test_python_renderer.py  test_typescript_renderer.py
tests/runtime/: test_python_api_error.py
tools/: README.md
tools/codegen/: README.md  bootstrap_ir.py  build_generator_manifest.py  ir-schema.json  render_csharp_client.py  render_python_client.py  render_typescript_client.py  run_pipeline.py
tools/codegen/lib/: ir_builder.py  manifest.py  normalize.py  validate.py
(+12 files in other folders)
